--- a/GitTest/app/build.gradle
+++ b/GitTest/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.baoyinbo'
 
 android {
     compileSdkVersion 25
@@ -26,5 +29,4 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.github.baoyinbo:test:-SNAPSHOT'
 }
