--- a/GitTest/app/build.gradle
+++ b/GitTest/app/build.gradle
@@ -25,6 +25,10 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:23.0.0'
     compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    //recyclerview适配器
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.8.6'
     testCompile 'junit:junit:4.12'
 
     //优化退出
