--- a/GitTest/app/src/main/AndroidManifest.xml
+++ b/GitTest/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/BybAppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.main.BybMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
