--- a/GitTest/app/build.gradle
+++ b/GitTest/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     //recyclerview适配器
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.8.6'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.9.8'
     testCompile 'junit:junit:4.12'
 
     //优化退出
