--- a/GitTest/app/build.gradle
+++ b/GitTest/app/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     //recyclerview适配器
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.9.8'
     testCompile 'junit:junit:4.12'
-
+    //注解
+    compile 'com.jakewharton:butterknife:7.0.1'
     //优化退出
     compile 'com.jude:swipebackhelper:3.1.2'
     //状态栏
