--- a/GitTest/app/build.gradle
+++ b/GitTest/app/build.gradle
@@ -23,6 +23,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':okhttp3')
     compile 'com.android.support:support-v4:23.0.0'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.4.0'
@@ -35,5 +36,6 @@ dependencies {
     compile 'com.jude:swipebackhelper:3.1.2'
     //状态栏
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
-
+    //下拉刷新
+    compile 'in.srain.cube:ultra-ptr:1.0.11'
 }
