--- a/GitTest/app/build.gradle
+++ b/GitTest/app/build.gradle
@@ -23,7 +23,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':okhttp3')
+//    compile project(':okhttp3')
     compile 'com.android.support:support-v4:23.0.0'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.4.0'
@@ -38,4 +38,14 @@ dependencies {
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     //下拉刷新
     compile 'in.srain.cube:ultra-ptr:1.0.11'
+    //网络请求
+//    compile 'com.robin.lazy.util:UtilLibrary:1.1.2'
+//    compile 'com.robin.lazy.net:NetLibrary:1.5.4'
+    compile 'com.zhy:okhttputils:2.6.2'
+//    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.2.4'
+    //日志打印
+    compile 'com.apkfuns.logutils:library:1.0.4'
+    //图片处理
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
