--- a/GitTest/app/build.gradle
+++ b/GitTest/app/build.gradle
@@ -45,7 +45,8 @@ dependencies {
 //    compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.2.4'
     //日志打印
-    compile 'com.apkfuns.logutils:library:1.0.4'
+//    compile 'com.apkfuns.logutils:library:1.0.4'
+    compile 'com.orhanobut:logger:1.4'
     //图片处理
     compile 'com.github.bumptech.glide:glide:3.7.0'
 }
