--- a/GitTest/app/build.gradle
+++ b/GitTest/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:cardview-v7:23.0.0'
     //recyclerview适配器
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.9.8'
     testCompile 'junit:junit:4.12'
