--- a/GitTest/app/build.gradle
+++ b/GitTest/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     compile 'com.orhanobut:logger:1.4'
     //图片处理
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'jp.wasabeef:recyclerview-animators:2.2.3'
 }
