--- a/GitTest/app/build.gradle
+++ b/GitTest/app/build.gradle
@@ -19,11 +19,31 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    //签名配置
+    signingConfigs {
+        debug {
+            storeFile file("debug.jks")
+            storePassword "123456"
+            keyAlias "baoyinbo"
+            keyPassword "123456"
+        }
+
+        release {
+            storeFile file("gittest_r.jks")
+            storePassword "123456"
+            keyAlias "baoyinbo"
+            keyPassword "123456"
+        }
+    }
 }
 
+
+
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-//    compile project(':okhttp3')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    //    compile project(':okhttp3')
     compile 'com.android.support:support-v4:23.0.0'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.4.0'
@@ -32,7 +52,6 @@ dependencies {
     //recyclerview适配器
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.9.8'
     testCompile 'junit:junit:4.12'
-
     //优化退出
     compile 'com.jude:swipebackhelper:3.1.2'
     //状态栏
@@ -40,16 +59,17 @@ dependencies {
     //下拉刷新
     compile 'in.srain.cube:ultra-ptr:1.0.11'
     //网络请求
-//    compile 'com.robin.lazy.util:UtilLibrary:1.1.2'
-//    compile 'com.robin.lazy.net:NetLibrary:1.5.4'
+    //    compile 'com.robin.lazy.util:UtilLibrary:1.1.2'
+    //    compile 'com.robin.lazy.net:NetLibrary:1.5.4'
     compile 'com.zhy:okhttputils:2.6.2'
-//    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.2.4'
+    //    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.google.code.gson:gson:2.2.4'
     //日志打印
-//    compile 'com.apkfuns.logutils:library:1.0.4'
+    //    compile 'com.apkfuns.logutils:library:1.0.4'
     compile 'com.orhanobut:logger:1.4'
     //图片处理
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
     compile 'jp.wasabeef:recyclerview-animators:2.2.3'
+    compile files('libs/AMap_Location_V3.3.0_20170118.jar')
+    compile files('libs/Android_Map3D_SDK_V5.0.0_20170311.jar')
 }
