--- a/GitTest/app/src/main/AndroidManifest.xml
+++ b/GitTest/app/src/main/AndroidManifest.xml
@@ -6,6 +6,20 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
+    //地图包、搜索包需要的基础权限
+    <!--允许程序打开网络套接字-->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!--允许程序设置内置sd卡的写权限-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!--允许程序获取网络状态-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--允许程序访问WiFi网络信息-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!--允许程序读写手机状态和身份-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--允许程序访问CellID或WiFi热点来获取粗略的位置-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:name=".BybApplication"
         android:allowBackup="true"
@@ -13,6 +27,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/BybAppTheme">
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="4905c61cbf95450a5453128c11b5a351"/>
+        <service android:name="com.amap.api.location.APSService" >
+        </service>
+
         <activity android:name=".ui.main.BybMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
