--- a/GitTest/app/build.gradle
+++ b/GitTest/app/build.gradle
@@ -36,6 +36,11 @@ android {
             keyPassword "123456"
         }
     }
+
+    //开启mvvm架构
+    dataBinding {
+        enabled true
+    }
 }
 
 
@@ -49,6 +54,7 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.0.0'
+    compile 'com.jude:easyrecyclerview:3.5.7'
     //recyclerview适配器
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.9.8'
     testCompile 'junit:junit:4.12'
