--- a/GitTest/app/src/main/AndroidManifest.xml
+++ b/GitTest/app/src/main/AndroidManifest.xml
@@ -44,6 +44,11 @@
             android:name=".ui.base.CommomActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
+
+        <activity
+            android:name=".ui.attention.BybMvvmModelTestFragment"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
     </application>
 
 </manifest>
