--- a/GitTest/app/build.gradle
+++ b/GitTest/app/build.gradle
@@ -78,4 +78,5 @@ dependencies {
     compile 'jp.wasabeef:recyclerview-animators:2.2.3'
     compile files('libs/AMap_Location_V3.3.0_20170118.jar')
     compile files('libs/Android_Map3D_SDK_V5.0.0_20170311.jar')
+    compile project(':defaultloadinglibrary')
 }
